--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ font-size: large;
 color:#dedede;
 width: 200px;
 padding: 10px;
-text-decoration: none;
 }
 #content{
 float: left;
@@ -39,4 +38,7 @@ color: white;
 text-align: center;
 padding: 10px;
 }
-
+a:link{
+color: #dedede;
+text-decoration: none;
+}
