--- a/style.css
+++ b/style.css
@@ -42,3 +42,15 @@ a:link{
 color: #dedede;
 text-decoration: none;
 }
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: grey;
+}
+
+a:active {
+  text-decoration: underline;
+}
